using Gap for solve concurrency problem and stuck at stressTest